# electronic_trade_platform

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
electronic_trade/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
electronic_trade/migrations/: 0001_initial.py  0002_alter_product_supplier.py  0003_alter_product_supplier_alter_supplier_supplier.py  0004_alter_supplier_debt.py  0005_alter_contact_supplier.py  0006_alter_contact_supplier.py  0007_alter_contact_supplier.py
